--- a/src/components/InputField/InputField.css
+++ b/src/components/InputField/InputField.css
@@ -6,11 +6,15 @@
 	display: block;
 	border-radius: 5px;
 	border: 1px solid transparent;
-	box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+	box-shadow: 0 3px 3px rgba(0, 0, 0, 0.1);
 	width: 100%;
 	margin: 20px 0;
 	transition: 0.3s;
 	padding-bottom: 5px;
+}
+.input-field:focus,
+.input-field:hover {
+	box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
 }
 .input-field.error {
 	border: 1px solid rgb(255, 36, 36);
