--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,9 +1,9 @@
 .Login {
-	width: 80%;
-	min-width: 500px;
-	box-shadow: 0 3px 15px rgba(0, 0, 0, 0.2);
-	height: 80%;
-	min-height: 400px;
+	/* width: 80%; */
+	/* min-width: 500px; */
+	/* box-shadow: 0 3px 15px rgba(0, 0, 0, 0.2); */
+	/* height: 80%; */
+	/* min-height: 400px; */
 	position: absolute;
 	transform: translate(-50%, -50%);
 	top: 50%;
@@ -16,7 +16,7 @@
 }
 .login-form {
 	padding: 50px;
-	width: 40%;
+	/* width: 40%; */
 	position: relative;
 	box-sizing: border-box;
 }
@@ -24,7 +24,8 @@
 	padding: 50px;
 	width: 60%;
 	box-sizing: border-box;
-	background: #eee;
+	background: #fff;
+	display: none;
 }
 .login-inputs {
 	margin: 20px 0;
