--- a/src/buttons.css
+++ b/src/buttons.css
@@ -14,6 +14,8 @@
 	letter-spacing: 2px;
 	cursor: pointer;
 	display: inline-block;
+	text-decoration: none;
+	color: inherit;
 }
 .btn.block {
 	display: block;
