--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,22 @@ body {
 .right {
 	float: right;
 }
+.half {
+	width: 50%;
+	display: inline-block;
+}
+.container {
+	width: 100%;
+	height: 100%;
+	padding: 30px;
+	box-sizing: border-box;
+}
+.header {
+	padding: 10px;
+	font-size: 30px;
+	margin: 10px 40px;
+}
+.header:hover {
+	text-decoration: underline;
+	cursor: default;
+}
