--- a/src/components/TopBar/TopBar.css
+++ b/src/components/TopBar/TopBar.css
@@ -1,5 +1,4 @@
 .top-bar {
-	line-height: 50px;
 	width: 100%;
 	height: 50px;
 	background: white;
@@ -27,12 +26,15 @@ body {
 	position: relative;
 	float: left;
 }
+.top-bar .option {
+	line-height: 50px;
+}
 .cart-content {
 	display: none;
 	position: absolute;
 	background: white;
 	width: 100%;
-	min-width: 160px;
+	min-width: 400px;
 	transform: translate(10px, 60px);
 	box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1);
 	border-top: 3px solid #333;
@@ -50,18 +52,8 @@ body {
 .cart-detail.active .cart-content {
 	display: block;
 }
-.cart-item,
-.buy-prod {
-	list-style-type: none;
-	width: 100%;
-	line-height: 40px;
-	text-align: center;
-	cursor: pointer;
-}
-.cart-item:hover {
-	background: #eee;
-	/* color: white; */
-}
-.active-link {
+
+.active-link,
+.cart-detail.active .toggle-cart {
 	background: #eee;
 }
