--- a/src/components/InputField/InputField.css
+++ b/src/components/InputField/InputField.css
@@ -56,6 +56,7 @@
 	font-family: inherit;
 	padding-left: 15px;
 	box-sizing: border-box;
+	resize: none;
 }
 .area .input-raw {
 	padding-top: 10px;
