--- a/src/components/UIUtils/Modal/Modal.css
+++ b/src/components/UIUtils/Modal/Modal.css
@@ -15,4 +15,10 @@
 	left: 50%;
 	background: white;
 	padding: 20px;
+	border-radius: 5px;
+}
+.modal-header {
+	font-size: 30px;
+	text-align: left;
+	padding: 10px;
 }
