--- a/src/index.css
+++ b/src/index.css
@@ -51,3 +51,13 @@ body {
 	width: 100%;
 	height: calc(100vh - 50px);
 }
+.vertical-padding {
+	padding: 30px 20px;
+}
+.centered-container {
+	padding: 20px 10px;
+	text-align: center;
+}
+.b-font {
+	font-size: 18px;
+}
