--- a/src/components/Dashboard/AllProducts/ItemCard/ItemCard.css
+++ b/src/components/Dashboard/AllProducts/ItemCard/ItemCard.css
@@ -1,7 +1,7 @@
 .item-card {
 	display: block;
 	float: left;
-	/* height: 300px; */
+	height: 300px;
 	color: inherit;
 	text-decoration: none;
 	width: 20%;
