--- a/src/components/InputField/InputField.css
+++ b/src/components/InputField/InputField.css
@@ -54,7 +54,7 @@
 	padding: 0;
 	outline: 0;
 	font-family: inherit;
-	padding-left: 15px;
+	padding: 0 15px;
 	box-sizing: border-box;
 	resize: none;
 }
