--- a/src/components/Sell/Sell.css
+++ b/src/components/Sell/Sell.css
@@ -1,57 +1,10 @@
-.label,
-.input {
-	padding: 10px;
-	box-sizing: border-box;
-}
-.label {
-	text-align: right;
-	width: 25%;
-	vertical-align: top;
-}
-.input {
-	width: 75%;
-}
 .input-group {
 	padding: 10px 40px;
 	box-sizing: border-box;
+	vertical-align: top;
 }
-
-.file-centered {
-	width: auto;
-	height: auto;
-	position: absolute;
+.centered {
+	position: relative;
 	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	border: 10px dashed #ddd;
-	width: 200px;
-	height: 200px;
-	text-align: center;
-}
-.file-centered:hover {
-	border-color: #333;
-}
-.file-centered form {
-	width: 100%;
-	height: 100%;
-}
-#fileme {
-	display: none;
-}
-
-.custom-file {
-	width: 100%;
-	height: 100%;
-	display: table;
-}
-
-.styled-upload {
-	display: table-cell;
-	vertical-align: middle;
-}
-
-.ocher {
-	color: #333;
-	font-size: 18px;
-	font-weight: bold;
+	transform: translateY(-50%);
 }
