--- a/src/components/TopBar/CartItem/CartItem.css
+++ b/src/components/TopBar/CartItem/CartItem.css
@@ -5,12 +5,13 @@
 	height: 80px;
 	cursor: pointer;
 	position: relative;
-	border-bottom: 1px solid #eee;
+	/* border-bottom: 1px solid #eee; */
 }
 .cart-item {
 	display: block;
 	color: inherit;
 	text-decoration: none;
+	transition: 0.3s;
 }
 .buy-prod {
 	text-align: center;
@@ -20,7 +21,8 @@
 }
 .cart-item:hover,
 .cart-item.active {
-	background: #eee;
+	background: rgb(50, 103, 218);
+	color: #fff;
 }
 .cart-image {
 	width: 80px;
@@ -30,6 +32,8 @@
 .cart-image img {
 	width: 100%;
 	height: 100%;
+	padding: 5px;
+	box-sizing: border-box;
 }
 
 .cart-details {
@@ -47,9 +51,6 @@
 	text-align: center;
 	font-size: 12px;
 	font-weight: bold;
-}
-.cart-count:hover {
-	background: #ccc;
 }
 .cart-count i {
 	color: red;
