--- a/src/index.css
+++ b/src/index.css
@@ -61,3 +61,15 @@ body {
 .b-font {
 	font-size: 18px;
 }
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+	-webkit-appearance: none;
+	margin: 0;
+}
+
+input[type="number"] {
+	-moz-appearance: textfield;
+}
+.bbx {
+	box-sizing: border-box;
+}
